alignment-fix

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 // Variables
-$body-bg:#26242e;
+$body-bg:#1d1d1d;
 $logo-fg:#d81f26;
 $black:#000000;
 body{
